<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/priority_label"
            android:labelFor="@+id/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@id/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/priorities">
        </Spinner>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/todo_edit_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/todo_edit_summary"
            android:imeOptions="actionNext"/>

        <CheckBox
            android:id="@+id/is_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/done"
            android:singleLine="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/due_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date_label"
            android:labelFor="@+id/due_date">
        </TextView>

        <EditText
            android:id="@id/due_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:clickable="true"
            android:inputType="datetime"
            android:onClick="selectDate"/>

    </LinearLayout>



    <EditText
        android:id="@+id/todo_edit_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/todo_edit_description"
        android:imeOptions="actionNext"/>

    <TextView
        android:id="@+id/date_created"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>

    <Button
        android:id="@+id/todo_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_edit_confirm"/>

</LinearLayout>